--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ img {
   display:block;
 }
 #game {
-  /*display:all;*/
+  /*display:none;*/
   position:absolute;
   width:480px;
   height:480px;
@@ -68,6 +68,57 @@ img {
 #tile6 {
   border-left:0;
 }
+
+.boardTile > img {
+  height: 120px;
+  width: 120px;
+  margin: 15px auto;
+}
+
+.button {
+  -moz-box-shadow:inset 0px 1px 0px 0px #fce2c1;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #fce2c1;
+  box-shadow:inset 0px 1px 0px 0px #fce2c1;
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffc477), color-stop(1, #fb9e25) );
+  background:-moz-linear-gradient( center top, #ffc477 5%, #fb9e25 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc477', endColorstr='#fb9e25');
+  background-color:#ffc477;
+  -webkit-border-top-left-radius:20px;
+  -moz-border-radius-topleft:20px;
+  border-top-left-radius:20px;
+  -webkit-border-top-right-radius:20px;
+  -moz-border-radius-topright:20px;
+  border-top-right-radius:20px;
+  -webkit-border-bottom-right-radius:20px;
+  -moz-border-radius-bottomright:20px;
+  border-bottom-right-radius:20px;
+  -webkit-border-bottom-left-radius:20px;
+  -moz-border-radius-bottomleft:20px;
+  border-bottom-left-radius:20px;
+  text-indent:0px;
+  border:1px solid #eeb44f;
+  display:inline-block;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:17px;
+  font-weight:bold;
+  font-style:normal;
+  height:67px;
+  line-height:67px;
+  width:155px;
+  text-decoration:none;
+  text-align:center;
+  text-shadow:1px 1px 0px #cc9f52;
+}
+.button:hover {
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
+  background:-moz-linear-gradient( center top, #fb9e25 5%, #ffc477 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9e25', endColorstr='#ffc477');
+  background-color:#fb9e25;
+}.button:active {
+  position:relative;
+  top:1px;
+}
 #teams {
   position:relative;
   overflow:hidden;
@@ -113,7 +164,6 @@ img {
   font-size:30px;
 }
 #overlay {
-  display:none;
   position:fixed;
   top:0;
   left:0;
@@ -123,7 +173,6 @@ img {
   z-index:-1;
 }
 #results {
-  display:none;
   position:fixed;
   z-index:2;
   top:50%;
@@ -180,3 +229,6 @@ img {
   width:160px;
   height:160px;
 }
+
+
+
